tests/paczka1/fuzzy1/60942229.err
Error in line 1: evxV A207 60,0
Error in line 3: evxV A841 47,5
Error in line 12: 7GK1H7Wqo6 S480 79,9
Error in line 17: d5mw S480 25,2
Error in line 30: evxV S480 14,1
Error in line 35: evxV S672 17,2
